--- a/DJResortOnline.csproj
+++ b/DJResortOnline.csproj
@@ -174,6 +174,7 @@
     <Content Include="MasterPage.css" />
     <Content Include="PriceList.aspx" />
     <Content Include="Reserved.aspx" />
+    <Content Include="ResetPassword.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -294,6 +295,13 @@
     </Compile>
     <Compile Include="Reserved.aspx.designer.cs">
       <DependentUpon>Reserved.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ResetPassword.aspx.cs">
+      <DependentUpon>ResetPassword.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ResetPassword.aspx.designer.cs">
+      <DependentUpon>ResetPassword.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
