With Backend updates

--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>  
+    <add name="DJConnections" connectionString="Data Source= (localdb)\Local; Integrated Security=true;Initial Catalog= db_DJ; uid=sa; Password=DJ@dmin; " providerName="System.Data.SqlClient" />   
+    </connectionStrings> 
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
