STATUS EDIT & DEALS UPDATE

--- a/Web.config
+++ b/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="DJConnections" connectionString="Data Source= (localdb)\Local; Integrated Security=true;Initial Catalog= db_DJ; uid=sa; Password=DJ@dmin; " providerName="System.Data.SqlClient" />
-		<!--<add name="DJConnections" connectionString="Server=172.16.202.196;Database=db_DJ;uid=sa;Password=sqladmin;" />-->
+		<!--<add name="DJConnections" connectionString="Data Source= (localdb)\Local; Integrated Security=true;Initial Catalog= db_DJ; uid=sa; Password=DJ@dmin; " providerName="System.Data.SqlClient" />-->
+		<add name="DJConnections" connectionString="Server=172.16.202.196;Database=db_DJ;uid=sa;Password=sqladmin;" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0"/>
