--- a/DJResortOnline.csproj
+++ b/DJResortOnline.csproj
@@ -463,6 +463,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
+    <Folder Include="image\Deals\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
