--- a/DJResortOnline.csproj
+++ b/DJResortOnline.csproj
@@ -17,7 +17,8 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>44378</IISExpressSSLPort>
+    <IISExpressSSLPort>
+    </IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -140,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="AddReservation.aspx" />
     <Content Include="Announcement.aspx" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\img\apple-touch-icon.png" />
@@ -337,6 +339,13 @@
     <Content Include="Views\web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddReservation.aspx.cs">
+      <DependentUpon>AddReservation.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddReservation.aspx.designer.cs">
+      <DependentUpon>AddReservation.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Announcement.aspx.cs">
       <DependentUpon>Announcement.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
