--- a/DJResortOnline.csproj
+++ b/DJResortOnline.csproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="AddReservation.aspx" />
+    <Content Include="AddDeal.aspx" />
     <Content Include="Announcement.aspx" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\img\apple-touch-icon.png" />
@@ -491,6 +492,13 @@
     </Compile>
     <Compile Include="AddReservation.aspx.designer.cs">
       <DependentUpon>AddReservation.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AddDeal.aspx.cs">
+      <DependentUpon>AddDeal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddDeal.aspx.designer.cs">
+      <DependentUpon>AddDeal.aspx</DependentUpon>
     </Compile>
     <Compile Include="Announcement.aspx.cs">
       <DependentUpon>Announcement.aspx</DependentUpon>
