--- a/DJResortOnline.csproj
+++ b/DJResortOnline.csproj
@@ -242,6 +242,7 @@
     <Content Include="Dashboard.aspx" />
     <Content Include="AddFeedback.aspx" />
     <Content Include="Facilities.aspx" />
+    <Content Include="Deal.aspx" />
     <Content Include="Front.aspx" />
     <Content Include="Deals.aspx" />
     <Content Include="Default.aspx" />
@@ -447,6 +448,7 @@
     <Content Include="image\Facilities\2Standee.JPG" />
     <Content Include="image\Facilities\3Garden.JPG" />
     <Content Include="image\Facilities\5Comfort Room.jpg" />
+    <Content Include="image\Facilities\hero-bg.jpg" />
     <Content Include="image\filledStar.JPG" />
     <Content Include="image\filledStar.png" />
     <Content Include="image\footer-logo.png" />
@@ -495,6 +497,7 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="Status.aspx" />
+    <Content Include="Facilities.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -560,6 +563,13 @@
     </Compile>
     <Compile Include="Facilities.aspx.designer.cs">
       <DependentUpon>Facilities.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Deal.aspx.cs">
+      <DependentUpon>Deal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Deal.aspx.designer.cs">
+      <DependentUpon>Deal.aspx</DependentUpon>
     </Compile>
     <Compile Include="Front.aspx.cs">
       <DependentUpon>Front.aspx</DependentUpon>
