--- a/DJResortOnline.csproj
+++ b/DJResortOnline.csproj
@@ -49,6 +49,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Documents\ASP.NET AJAX Control Toolkit\Bin\AjaxControlToolkit.dll</HintPath>
     </Reference>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.9.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>packages\BouncyCastle.1.8.9\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.3, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>packages\iTextSharp.5.5.13.3\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
@@ -144,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="AddFeedback.css" />
     <Content Include="AddReservation.aspx" />
     <Content Include="AddDeal.aspx" />
     <Content Include="Announcement.aspx" />
@@ -465,6 +472,7 @@
     <Content Include="PriceList.css" />
     <Content Include="PrintInvoice.aspx" />
     <Content Include="PrintInvoice.css" />
+    <Content Include="HealthDeclaration.aspx" />
     <Content Include="Reserved.aspx" />
     <Content Include="ResetPassword.aspx" />
     <Content Include="Scripts\bootstrap.js" />
@@ -652,6 +660,13 @@
       <DependentUpon>PrintInvoice.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HealthDeclaration.aspx.cs">
+      <DependentUpon>HealthDeclaration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HealthDeclaration.aspx.designer.cs">
+      <DependentUpon>HealthDeclaration.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Reserved.aspx.cs">
       <DependentUpon>Reserved.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
