--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,8 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.4.1" targetFramework="net45" />
   <package id="AspNet.ScriptManager.jQuery" version="3.4.1" targetFramework="net45" />
   <package id="bootstrap" version="3.4.1" targetFramework="net45" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
