--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="AspNet.ScriptManager.jQuery" version="3.4.1" targetFramework="net45" />
   <package id="bootstrap" version="3.4.1" targetFramework="net45" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="EAGetMail" version="5.2.5.8" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
@@ -24,5 +25,11 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Pkcs" version="6.0.1" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
